[package]

name = "daniels5-simulation"
version = "0.1.0"
authors = [
    "Daniel Svensson <daniels5@kth.se>"
]

[[bin]]
name = "flocking-simulation"

[dependencies]
piston = "0.53.0"
piston2d-graphics = "0.43.0"
pistoncore-glutin_window = "0.70.1"
piston2d-opengl_graphics = "0.82.0"
vecmath = "1.0.0"
rand = "0.8.5"